OO-8374: redesign main page of coaching tool